--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<main>
-    <div>
+<main class="app-layout__main">
+    <div class="app-layout__side-menu-wrapper">
         <app-side-menu></app-side-menu>
     </div>
-    <div>
+    <div class="app-layout__page-wrapper">
         <router-outlet></router-outlet>
     </div>
 </main>
