--- a/src/styles/app-layout.scss
+++ b/src/styles/app-layout.scss
@@ -2,4 +2,31 @@
     display: flex;
     flex-direction: column;
     min-height: 100%;
+    background: $color-primary;
+
+    &__main {
+        flex-grow: 1;
+        display: flex;
+        align-items: stretch;
+    }
+
+    &__side-menu-wrapper {
+        flex-basis: 250px;
+        display: flex;
+        flex-direction: column;
+
+        & > {
+            flex-grow: 1;
+        }
+    }
+
+    &__page-wrapper {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+
+        & > {
+            flex-grow: 1;
+        }
+    }
 }
