implemented menu blueprint

--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -1,1 +1,6 @@
-<div>Side menu will be here</div>
+<h1 class="side-menu__title">My App</h1>
+<ul class="side-menu__links">
+    <li *ngFor="let link of links" class="side-menu__entry">
+        <a [routerLink]="[link.href]">{{ link.title }}</a>
+    </li>
+</ul>
