--- a/src/styles/app-layout.scss
+++ b/src/styles/app-layout.scss
@@ -15,17 +15,16 @@
         display: flex;
         flex-direction: column;
 
-        & > {
+        & > * {
+            display: block;
             flex-grow: 1;
         }
     }
 
     &__page-wrapper {
         flex-grow: 1;
-        display: flex;
-        flex-direction: column;
 
-        & > {
+        & > * {
             flex-grow: 1;
         }
     }
