--- a/src/styles/special/colors.scss
+++ b/src/styles/special/colors.scss
@@ -1,5 +1,6 @@
 $color-primary: #fff;
-$color-secondary: #faa916;
+$color-secondary: #f5edf0;
+$color-bright: #faa916;
 $color-extra: #6d676e;
 $color-contrast: #96031a;
 $color-text: #1b1b1e;
