--- a/src/styles/app-layout.scss
+++ b/src/styles/app-layout.scss
@@ -11,7 +11,7 @@
     }
 
     &__side-menu-wrapper {
-        flex-basis: 250px;
+        flex: 250px 0 0;
         display: flex;
         flex-direction: column;
 
