--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
         <app-side-menu></app-side-menu>
     </div>
     <div class="app-layout__page-wrapper">
-        <router-outlet></router-outlet>
+        <router-outlet
+            class="app-layout__router-outlet">
+        </router-outlet>
     </div>
 </main>
