--- a/src/styles/app-layout.scss
+++ b/src/styles/app-layout.scss
@@ -23,9 +23,15 @@
 
     &__page-wrapper {
         flex-grow: 1;
+        display: flex;
+        flex-direction: column;
 
         & > * {
             flex-grow: 1;
         }
+    }
+
+    &__router-outlet {
+        display: none;
     }
 }
