dashboard module wip

--- a/src/app/components/page-dashboard/page-dashboard.component.html
+++ b/src/app/components/page-dashboard/page-dashboard.component.html
@@ -1,2 +1,5 @@
-<div>Dashboard page will be here</div>
+<div class="page-dashboard__banner main-banner">
+    <h3>Welcome to</h3>
+    <h1>My App</h1>
+</div>
 
