--- a/src/app/components/side-menu/side-menu.component.scss
+++ b/src/app/components/side-menu/side-menu.component.scss
@@ -7,17 +7,17 @@
     .side-menu {
         &__title {
             padding-left: 10px;
+            font-size: 20px;
+            margin: 40px 0 20px 0;
         }
 
         &__links {
             list-style-type: none;
             padding-left: 0;
-            margin-top: -5px;
             margin-bottom: 0;
         }
 
         &__entry {
-            margin-top: 5px;
             transition: color 0.3s linear;
             transition: background 0.1s linear;
 
@@ -34,8 +34,6 @@
         &__link {
             padding: 10px;
             display: block;
-            width: 100%;
-            height: 100%;
 
             &, &:link, &:visited {
                 text-decoration: none;
