dashboard module wip

--- a/src/app/components/page-dashboard/page-dashboard.component.html
+++ b/src/app/components/page-dashboard/page-dashboard.component.html
@@ -1,5 +1,9 @@
 <div class="page-dashboard__banner main-banner">
-    <h3>Welcome to</h3>
-    <h1>My App</h1>
+    <h3 class="main-banner__pre-title">
+        Welcome to
+    </h3>
+    <h1 class="main-banner__title">
+        My App
+    </h1>
 </div>
 
