--- a/src/app/components/side-menu/side-menu.component.scss
+++ b/src/app/components/side-menu/side-menu.component.scss
@@ -23,7 +23,7 @@
 
             &--active {
                 color: $color-secondary;
-                background: $color-bright;
+                background: $color-active;
             }
 
             &:not(&--active) {
