--- a/src/styles/special/colors.scss
+++ b/src/styles/special/colors.scss
@@ -1,6 +1,6 @@
-$color-primary: #fff;
-$color-secondary: #f5edf0;
-$color-bright: #faa916;
-$color-extra: #6d676e;
-$color-contrast: #96031a;
-$color-text: #1b1b1e;
+$color-primary: #FFF;
+$color-secondary: #EEF0F2;
+$color-bright: #FFB20F;
+$color-active: #2C5AFF;
+$color-contrast: #2D3142;
+$color-text: #141414;
