--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,7 @@ html {
     height: 100%;
     overflow-x: hidden;
     line-height: 1.45;
+    color: $color-text;
 }
 
 .body {
@@ -18,4 +19,3 @@ html {
     height: 100%;
     overflow-x: hidden;
 }
-
