added page layouts

--- a/src/app/components/page-dashboard/page-dashboard.component.html
+++ b/src/app/components/page-dashboard/page-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="page-dashboard__banner main-banner">
+<div class="page__content page-dashboard__banner main-banner">
     <h3 class="main-banner__pre-title">
         Welcome to
     </h3>
