--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,1 +1,3 @@
-<div>This page doesn't exist ¯\_(ツ)_/¯</div>
+<div class="page__content page__content--padded">
+    This page doesn't exist ¯\_(ツ)_/¯
+</div>
