implemented page layout

--- a/src/app/components/page-albums/page-albums.component.html
+++ b/src/app/components/page-albums/page-albums.component.html
@@ -1,3 +1,6 @@
 <div class="page__content">
-    Albums page will be here
+    <app-layout-page>
+        <ng-container title>Albums</ng-container>
+        Albums page will be here
+    </app-layout-page>
 </div>
