--- a/src/app/components/page-photos/page-photos.component.html
+++ b/src/app/components/page-photos/page-photos.component.html
@@ -1,4 +1,6 @@
 <div class="page__content">
-    Photos page will be here
+    <app-layout-page>
+        <ng-container title>Photos</ng-container>
+        Photos page will be here
+    </app-layout-page>
 </div>
-
