--- a/src/app/components/page-posts/page-posts.component.html
+++ b/src/app/components/page-posts/page-posts.component.html
@@ -1,3 +1,6 @@
 <div class="page__content">
-    Posts page will be here
+    <app-layout-page>
+        <ng-container title>Posts</ng-container>
+        Posts page will be here
+    </app-layout-page>
 </div>
