--- a/src/app/components/page-posts/page-posts.component.html
+++ b/src/app/components/page-posts/page-posts.component.html
@@ -1,23 +1,32 @@
 <div class="page__content">
     <app-layout-page>
         <ng-container title>Posts</ng-container>
-        <table>
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>User</th>
-                    <th>Title</th>
-                    <th>Content</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let post of posts$ | async">
-                    <td>{{ post.id }}</td>
-                    <td>User {{ post.userId }}</td>
-                    <td>{{ post.title }}</td>
-                    <td>{{ post.body }}</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="page-posts__content">
+            <div *ngIf="!(isLoading$ | async)"
+                class="page-posts__data">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>User</th>
+                            <th>Title</th>
+                            <th>Content</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let post of posts$ | async">
+                            <td>{{ post.id }}</td>
+                            <td>User {{ post.userId }}</td>
+                            <td>{{ post.title }}</td>
+                            <td>{{ post.body }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="page-posts__loader-overlay"
+            *ngIf="(isLoading$ | async)">
+            <div class="loader"></div>
+        </div>
     </app-layout-page>
 </div>
