--- a/src/app/components/page-dashboard/page-dashboard.component.html
+++ b/src/app/components/page-dashboard/page-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="page__content page-dashboard__banner main-banner">
+<div class="page__content page__content--no-grow page-dashboard__banner main-banner">
     <h3 class="main-banner__pre-title">
         Welcome to
     </h3>
@@ -6,6 +6,6 @@
         My App
     </h1>
 </div>
-<div class="page__content">
+<div class="page__content ">
     Dashboard will be here
 </div>
