--- a/src/app/components/page-posts/page-posts.component.html
+++ b/src/app/components/page-posts/page-posts.component.html
@@ -23,10 +23,10 @@
                     </tbody>
                 </table>
             </div>
-        </div>
-        <div class="page-posts__loader-overlay"
-            *ngIf="(isLoading$ | async)">
-            <div class="loader"></div>
+            <div class="page-posts__loader-overlay"
+                *ngIf="(isLoading$ | async)">
+                <app-loader></app-loader>
+            </div>
         </div>
     </app-layout-page>
 </div>
