--- a/src/app/components/page-posts/page-posts.component.scss
+++ b/src/app/components/page-posts/page-posts.component.scss
@@ -1,12 +1,13 @@
 :host {
-
     .page-posts {
         &__content {
             position: relative;
+            min-height: 150px;
         }
 
         &__loader-overlay {
             position: absolute;
+            inset: 0;
             display: flex;
             justify-content: center;
             align-items: center;
