--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -7,5 +7,9 @@
         padding: 10px 80px;
         display: flex;
         flex-direction: column;
+
+        &--no-grow {
+            flex-grow: 0;
+        }
     }
 }
