--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
         </router-outlet>
         <div *ngIf="moduleLoading"
             class="app-layout__loader-overlay">
-            <div class="loader"></div>
+            <app-loader></app-loader>
         </div>
     </div>
 </main>
