--- a/src/app/components/page-posts/page-posts.component.html
+++ b/src/app/components/page-posts/page-posts.component.html
@@ -4,30 +4,42 @@
         <div class="page-posts__content">
             <div *ngIf="!(isLoading$ | async)"
                 class="page-posts__data">
-                <table class="posts-table">
-                    <colgroup>
-                        <col class="posts-table__col-id">
-                        <col class="posts-table__col-user">
-                        <col class="posts-table__col-title">
-                        <col class="posts-table__col-content">
-                    </colgroup>
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>User</th>
-                            <th>Title</th>
-                            <th>Content</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let post of posts$ | async">
-                            <td class="posts-table__cell-id">{{ post.id }}</td>
-                            <td class="posts-table__cell-id">User {{ post.userId }}</td>
-                            <td class="posts-table__cell-title">{{ post.title }}</td>
-                            <td class="posts-table__cell-content">{{ post.body }}</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="page-posts__table-wrapper">
+                    <table class="posts-table">
+                        <thead>
+                            <tr>
+                                <th class="posts-table__cell posts-table__cell--head">
+                                    ID
+                                </th>
+                                <th class="posts-table__cell posts-table__cell--head">
+                                    User
+                                </th>
+                                <th class="posts-table__cell posts-table__cell--head">
+                                    Title
+                                </th>
+                                <th class="posts-table__cell posts-table__cell--head">
+                                    Content
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody class="posts-table__body">
+                            <tr *ngFor="let post of posts$ | async">
+                                <td class="posts-table__cell posts-table__cell--id">
+                                    {{ post.id }}
+                                </td>
+                                <td class="posts-table__cell posts-table__cell--user">
+                                    User {{ post.userId }}
+                                </td>
+                                <td class="posts-table__cell posts-table__cell--title">
+                                    {{ post.title }}
+                                </td>
+                                <td class="posts-table__cell posts-table__cell--content">
+                                    {{ post.body }}
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
             <div class="page-posts__loader-overlay"
                 *ngIf="(isLoading$ | async)">
