--- a/src/styles/app-layout.scss
+++ b/src/styles/app-layout.scss
@@ -24,6 +24,7 @@
     }
 
     &__page-wrapper {
+        overflow-x: hidden;
         flex-grow: 1;
         display: flex;
         flex-direction: column;
