--- a/src/app/components/page-posts/page-posts.component.html
+++ b/src/app/components/page-posts/page-posts.component.html
@@ -39,6 +39,12 @@
                             </tr>
                         </tbody>
                     </table>
+                    <app-pagination
+                        [totalPages]="totalPages$ | async"
+                        [activePage]="activePage$ | async"
+                        [radius]="4"
+                        (onGo)="go($event)">
+                    </app-pagination>
                 </div>
             </div>
             <div class="page-posts__loader-overlay"
