--- a/src/app/components/pagination/pagination.component.html
+++ b/src/app/components/pagination/pagination.component.html
@@ -11,7 +11,7 @@
 </div>
 
 <div class="pagination__item" *ngFor="let index of range" (click)="go(index)">
-    {{ index }}
+    {{ index + 1 }}
 </div>
 
 <div class="pagination__item" *ngIf="activePage + radius < totalPages - 2">
