--- a/src/app/components/page-posts/page-posts.component.html
+++ b/src/app/components/page-posts/page-posts.component.html
@@ -39,10 +39,12 @@
                             </tr>
                         </tbody>
                     </table>
+                </div>
+                <div class="page-posts__pagination-wrapper">
                     <app-pagination
                         [totalPages]="totalPages$ | async"
                         [activePage]="activePage$ | async"
-                        [radius]="4"
+                        [radius]="3"
                         (onGo)="go($event)">
                     </app-pagination>
                 </div>
