--- a/src/app/components/page-posts/page-posts.component.scss
+++ b/src/app/components/page-posts/page-posts.component.scss
@@ -4,6 +4,7 @@
     .page-posts {
         &__data {
             display: flex;
+            flex-direction: column;
         }
 
         &__table-wrapper {
@@ -22,6 +23,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
+        }
+
+        &__pagination-wrapper {
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
         }
     }
 }
