--- a/src/app/components/pagination/pagination.component.html
+++ b/src/app/components/pagination/pagination.component.html
@@ -1,27 +1,36 @@
-<div class="pagination__item" (click)="goPrev()">
-    Previuos
-</div>
+<ul class="pagination__list">
+    <li class="pagination__item" (click)="goPrev()">
+        Previuos
+    </li>
 
-<div class="pagination__item" (click)="go(0)">
-    1
-</div>
+    <li class="pagination__item"
+        [ngClass]="{'pagination__item--active': activePage === 0}"
+        (click)="go(0)">
+        1
+    </li>
 
-<div class="pagination__item" *ngIf="activePage - radius > 1 + 2">
-    ...
-</div>
+    <li class="pagination__item"
+        *ngIf="activePage - radius > 1 + 2">
+        ...
+    </li>
 
-<div class="pagination__item" *ngFor="let index of range" (click)="go(index)">
-    {{ index + 1 }}
-</div>
+    <li class="pagination__item"
+        [ngClass]="{'pagination__item--active': activePage === index}"
+        *ngFor="let index of range" (click)="go(index)">
+        {{ index + 1 }}
+    </li>
 
-<div class="pagination__item" *ngIf="activePage + radius < totalPages - 2">
-    ...
-</div>
+    <li class="pagination__item" *ngIf="activePage + radius < totalPages - 2">
+        ...
+    </li>
 
-<div class="pagination__item" (click)="go(totalPages - 1)">
-    {{ totalPages }}
-</div>
+    <li class="pagination__item"
+        [ngClass]="{'pagination__item--active': activePage === totalPages - 1}"
+        (click)="go(totalPages - 1)">
+        {{ totalPages }}
+    </li>
 
-<div class="pagination__item" (click)="goNext()">
-    Next
-</div>
+    <li class="pagination__item" (click)="goNext()">
+        Next
+    </li>
+</ul>
