--- a/src/app/components/pagination/pagination.component.scss
+++ b/src/app/components/pagination/pagination.component.scss
@@ -14,7 +14,7 @@
         &__item {
             margin: 3px;
             background: $color-secondary;
-            padding: 10px;
+            padding: 5px 10px;
             cursor: pointer;
 
             &--active {
