--- a/src/styles/posts-table.scss
+++ b/src/styles/posts-table.scss
@@ -7,9 +7,6 @@
         overflow-x: auto;
         min-width: 100%;
 
-        &__body {
-        }
-
         &, &__cell {
             border: 1px solid $color-secondary;
             border-collapse: collapse;
@@ -18,12 +15,10 @@
         &__cell {
             padding: 5px 10px;
             white-space: nowrap;
-        }
 
-        &__cell--id {
-        }
-
-        &__cell--user {
+            &--head {
+                text-align: left;
+            }
         }
 
         &__cell--title {
