--- a/src/app/components/pagination/pagination.component.scss
+++ b/src/app/components/pagination/pagination.component.scss
@@ -6,6 +6,7 @@
 
     .pagination {
         &__list {
+            padding-left: 0;
             margin: -3px;
             list-style-type: none;
             display: flex;
