--- a/src/app/components/pagination/pagination.component.html
+++ b/src/app/components/pagination/pagination.component.html
@@ -10,7 +10,7 @@
     </li>
 
     <li class="pagination__item"
-        *ngIf="activePage - radius > 1 + 2">
+        *ngIf="hasLeftDots">
         ...
     </li>
 
@@ -20,7 +20,7 @@
         {{ index + 1 }}
     </li>
 
-    <li class="pagination__item" *ngIf="activePage + radius < totalPages - 2">
+    <li class="pagination__item" *ngIf="hasRightDots">
         ...
     </li>
 
