--- a/src/app/components/pagination/pagination.component.scss
+++ b/src/app/components/pagination/pagination.component.scss
@@ -17,10 +17,16 @@
             background: $color-secondary;
             padding: 5px 10px;
             cursor: pointer;
+            min-width: 20px;
+            text-align: center;
 
             &--active {
                 background: $color-active;
                 color: $color-primary;
+            }
+
+            &--nav {
+                min-width: 60px;
             }
         }
     }
