added search inputs

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,3 +17,6 @@ html {
     height: 100%;
     overflow-x: hidden;
 }
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
