--- a/src/styles/special/colors.scss
+++ b/src/styles/special/colors.scss
@@ -1,5 +1,5 @@
 $color-primary: #FFF;
-$color-secondary: #EEF0F2;
+$color-secondary: #EDF2F4;
 $color-bright: #FFB20F;
 $color-active: #2C5AFF;
 $color-contrast: #2D3142;
