--- a/src/app/components/page-posts/page-posts.component.html
+++ b/src/app/components/page-posts/page-posts.component.html
@@ -1,6 +1,28 @@
 <div class="page__content">
     <app-layout-page>
         <ng-container title>Posts</ng-container>
+
+        <div class="page__search-wrapper">
+            <div class="search-filters">
+                <div class="search-filters__list">
+                    <input class="search-filters__entry search-filters__input"
+                        [(ngModel)]="searchTerm">
+                    <select class="search-filters__entry search-filters__input"
+                        [(ngModel)]="searchField">
+                        <option [value]="searchFieldTypes.User">
+                            User
+                        </option>
+                        <option [value]="searchFieldTypes.Title">
+                            Title
+                        </option>
+                        <option [value]="searchFieldTypes.Content">
+                            Content
+                        </option>
+                    </select>
+                </div>
+            </div>
+        </div>
+
         <div class="page-posts__content">
             <div *ngIf="!(isLoading$ | async)"
                 class="page-posts__data">
