--- a/src/app/components/page-posts/page-posts.component.html
+++ b/src/app/components/page-posts/page-posts.component.html
@@ -6,10 +6,10 @@
             <div class="search-filters">
                 <div class="search-filters__list">
                     <input class="search-filters__entry search-filters__input"
-                        [ngModel]="searchTerm"
+                        [ngModel]="searchTerm$ | async"
                         (ngModelChange)="setSearchTerm($event)">
                     <select class="search-filters__entry search-filters__input"
-                        [ngModel]="searchField"
+                        [ngModel]="searchField$ | async"
                         (ngModelChange)="setSearchField($event)">
                         <option [value]="searchFieldTypes.User">
                             User
