--- a/src/app/components/page-post/page-post.component.html
+++ b/src/app/components/page-post/page-post.component.html
@@ -1,8 +1,8 @@
 <div class="page__content">
     <app-layout-page>
-        <ng-container title>{{ (post$ | async).title }}</ng-container>
+        <ng-container title>{{ (post$ | async)?.title }}</ng-container>
         <div class="page-posts__content">
-            {{ (post$ | async).body }}
+            {{ (post$ | async)?.body }}
         </div>
     </app-layout-page>
 </div>
