fixed bootstrap import

--- a/src/app/components/page-posts/page-posts.component.html
+++ b/src/app/components/page-posts/page-posts.component.html
@@ -34,7 +34,7 @@
                         <thead>
                             <tr>
                                 <th class="posts-table__cell posts-table__cell--head">
-                                    ID
+                                    ID <i class="glyphicon-tag"></i>
                                 </th>
                                 <th class="posts-table__cell posts-table__cell--head">
                                     User
