--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import 'normalize.css';
 @import 'bootstrap/scss/bootstrap';
+@import 'bootstrap-icons';
 
 @import 'special/colors';
 @import 'app-layout';
