--- a/src/app/components/page-posts/page-posts.component.html
+++ b/src/app/components/page-posts/page-posts.component.html
@@ -36,8 +36,10 @@
                                 <th class="posts-table__cell posts-table__cell--head">
                                     ID
                                     <app-sort-toggler
+                                        *ngIf="(sortField$ | async) === sortFields.Id"
                                         ngDefaultControl
-                                        [(ngModel)]="idSortType">
+                                        [ngModel]="sortType$ | async"
+                                        (ngModelChange)="setSortType($event)">
                                     </app-sort-toggler>
                                 </th>
                                 <th class="posts-table__cell posts-table__cell--head">
