--- a/src/app/components/album-entry/album-entry.component.scss
+++ b/src/app/components/album-entry/album-entry.component.scss
@@ -1,2 +1,7 @@
+@import '../../../styles/special/colors';
+@import '../../../styles/album-entry-images';
+
 :host {
+    display: block;
+    background: $color-secondary;
 }
