--- a/src/app/components/page-albums/page-albums.component.html
+++ b/src/app/components/page-albums/page-albums.component.html
@@ -13,7 +13,7 @@
                         [ngModel]="searchField$ | async"
                         (ngModelChange)="setSearchField($event)">
                         <option [value]="searchFieldTypes.User">
-                            User
+                            Author
                         </option>
                         <option [value]="searchFieldTypes.Title">
                             Title
